<resources>
    <string name="app_name">Jome17wave</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BottomBarHome">首頁</string>
    <string name="BottomBarMap">地圖</string>
    <string name="BottomBarBell">通知</string>
    <string name="BottomBarMember">會員中心</string>
    <string name="SearchViewText">請輸入浪點</string>
    <string name="MapAppName">地圖</string>
    <string name="textNoNetwork">沒有網路連線</string>
    <string name="textNoMapsFound">no maps found</string>
    <string name="textNoGroupsFound">目前沒有揪團</string>
    <string name="thisWeekTitle">本週</string>
    <string name="friendInvitationTitle">好友邀請</string>
    <string name="EarlierTitle">更早以前</string>
    <string name="findNewFriendTitle">找尋新朋友</string>
    <string name="messageCenterTitle">訊息中心</string>
    <string name="findCahtRoom">搜尋聊天室</string>
    <string name="message">發送訊息....</string>
    <string name="notification_center">動態中心</string>
    <string name="M_Title">會員中心</string>
    <string name="phoneModify">手機驗証</string>
    <string name="modifyPw">修改密碼</string>
    <string name="checkPw">確認密碼</string>
    <string name="modifyNn">修改暱稱</string>
    <string name="enterPw">請輸入密碼</string>
    <string name="againPw">再次輸入密碼</string>
    <string name="collectScore">目前累積評價</string>
    <string name="count">次</string>
    <string name="friend">好友</string>
    <string name="Score">評分</string>
    <string name="myGroup">揪團記錄</string>
    <string name="myAttending">入團記錄</string>
    <string name="passRecord">過往記錄</string>
    <string name="etAccount">請輸入會員帳號</string>
    <string name="loginTitle">JoMe17浪</string>
    <string name="tvEmail">電子郵件</string>
    <string name="tvEmailHint">Jomewave@mail.com</string>
    <string name="tvVerifyCode">驗証碼</string>
    <string name="etVeryfyCode">請輸入驗証碼</string>
    <string name="tvPhVerifyCode">手機驗証碼</string>
    <string name="tvCellPhone">手機</string>
    <string name="enterVerifyCode">請輸入驗証碼</string>
    <string name="RegisterMail">會員帳號</string>
    <string name="RegisterPw">會員密碼</string>
    <string name="RegisterNn">會員暱稱</string>
    <string name="Nickname">請輸入暱稱</string>
    <string name="PhoneHint">請輸入手機</string>
    <string name="tvGender">性別</string>

    <string name="northSide">北部浪點</string>
    <string name="eastSide">東部浪點</string>
    <string name="southSide">南部浪點</string>
    <string name="westSide">西部浪點</string>


    <string name="nearMember">附近用戶</string>


    <string name="no_network_connection_available">沒有網路連線</string>
    <string name="no_notifications_found">沒有任何通知訊息</string>
    <string name="friend_Invitation">好友邀請</string>
    <string name="no_invitations_found">沒有任何好友邀請</string>


    <string name="firendCount">好友人數</string>
    <string name="averageScore">平均星等</string>
    <string name="assembleConut">揪團次數</string>
    <string name="jointCount">入團次數</string>
    <string name="ScorePieChart">累積評價</string>
    <string name="successModify">修改資料成功</string>
    <string name="memberModify">修改資料</string>
    <string name="unuseAcOrPw">輸入欄位不可空白</string>
    <string name="logiDeline">登入失敗</string>

    <string name="profile">個人頁面</string>
    <string name="add_friend">加入好友</string>
    <string name="search">搜尋</string>
    <string name="input_account">請輸入好友的帳號</string>
    <string name="friend_invitation_send">已發送好友邀請</string>

    <string name="notVerify">尚未驗証</string>
    <string name="hasVerify">完成驗証</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="thirdsex">第三性</string>
    <string name="allSurfPoint">全台浪點</string>
    <string name="nearUser">附近用戶</string>
    <string name="successRegister">註冊成功，請重新登入</string>
    <string name="passwordIsError">密碼確認錯誤</string>
    <string name="was_friend">已成為好友</string>
    <string name="pedding">等待回覆中</string>
    <string name="change_fail">動作失效</string>
    <string name="decline_friend">拒絕成為好友</string>


    <string name="no_information_found">找不到相關訊息</string>
    <string name="friend_invitation_fail">好友邀請失敗</string>
    <string name="friend_invitation_successfully">已發送好友邀請</string>
    <string name="accountNotExist">帳號不存在</string>


    <string name="textLocation">請選擇地點</string>
    <string-array name="spnLocationArray">
        <item>新北市</item>
        <item>金山浪點（中角灣）</item>
        <item>福隆浪點</item>
        <item>宜蘭縣</item>
        <item>烏石港浪點（北堤）</item>
        <item>外澳浪點</item>
        <item>台東縣</item>
        <item>金樽浪點</item>
    </string-array>

    <string name="textGender">請選擇性別</string>
    <string name="textShouldGrant">permission to access external storage should be granted</string>
    <string name="textDirNotCreated">DIRECTORY_PICTURES cannot be created</string>
    <string name="textNoCameraAppFound">no camera app found</string>
    <string name="myself">哎呀，居然是自己</string>
    <string name="groupName">揪團標題</string>
    <string name="groupCaptain">本次團長</string>
    <string name="groupDate">日期時間</string>
    <string name="groupLocation">集合地點</string>
    <string name="groupLimit">需求人數</string>
    <string name="groupDetail">揪團資訊</string>
    <string name="change_successful">申請成功</string>
    <string name="accountIsExist">帳號已存在，請重新註冊</string>
    <string name="ratingPageTitle">活動滿意度</string>
    <string name="newGroupName">請輸入團名 (限10字元)</string>
    <string name="addGroupDate">請選擇日期</string>
    <string name="addGroupTime">請選擇時間</string>
    <string name="addGroupPeople">人數</string>
    <string name="addGroupNotic">給團友的話(限50字元)</string>
    <string name="createGroupFail">建立揪團失敗</string>
    <string name="createGroupSuccessfully">建立揪團成功</string>
    <string name="default_notification_channel_id">default_channel_id</string>
    <string name="default_notification_channel_name">default_channel_name</string>
    <string name="addImagePlease">請選擇照片</string>
    <string name="ratingsFinished">完成評分</string>
    <string name="textInvalidCode">驗証碼錯誤</string>
    <string name="pwInconsistent">密碼欄位不一致</string>
    <string name="phoneIsError">電話號碼錯誤</string>
    <string name="textIsError">請輸入正確資料</string>
    <string name="passwordResetFinish">密碼變更完成</string>
    <string name="accountIsBan">停權帳號</string>
    <string name="containUs">請與我們聯絡</string>
    <string name="ourEmail">Email</string>
    <string name="textNo">離開App</string>
    <string name="logout">登出</string>
    <string name="realleylogout">你是真心要離開嗎?</string>
    <string name="trueLogOut">確定登出</string>
    <string name="falseLogOut">先不要</string>
    <string-array name="textGenderArray">
        <item>男生</item>
        <item>女生</item>
        <item>第三性</item>
        <item>不拘</item>
    </string-array>

    <string-array name="surfPointArray">
        <item>金山中角灣浪點</item>
        <item>翡翠灣浪點</item>
        <item>福隆浪點</item>
        <item>雙獅浪點</item>
        <item>烏石港北堤浪點</item>
        <item>金樽浪點</item>
        <item>南灣浪點</item>
        <item>佳樂水浪點</item>
        <item>漁光島馬場浪點</item>
        <item>竹南浪點</item>
    </string-array>


</resources>