<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/icon_awesome_home"
        android:title="@string/BottomBarHome" />

    <item
        android:id="@+id/mapsFragment"
        android:icon="@drawable/icon_awesome_map_marked_alt"
        android:title="@string/BottomBarMap" />

    <item
        android:id="@+id/creatFragment"
        android:icon="@drawable/icon_awesome_plus"
        android:title="" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/icon_awesome_bell"
        android:title="@string/BottomBarBell" />

    <item
        android:id="@+id/memberFragment2"
        android:icon="@drawable/icon_ionic_md_person"
        android:title="@string/BottomBarMember" />

</menu>